Fix translation issues and introduce translation formatting for issues (#139)
Split translation keys if they're used for both warnings and errors since the implicitly added translation arguments differ.

Added a lot of tests for translated error messages.